# soundbits

./: .gitignore  hello.py  orderobject.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: Dockerfile  fly.toml  manage.py  requirements.txt
src/accounts/: admin.py  models.py
src/accounts/migrations/: 0001_initial.py  0002_alter_broadcaster_lemon_customer_id_and_more.py  0003_broadcaster_max_free_runs.py
src/billing/: client.py  constants.py  services.py  views.py
src/main/: admin.py  constants.py  consumers.py  forms.py  models.py  routing.py  services.py  tests.py  urls.py  views.py
src/main/migrations/: 0001_initial.py  0002_alertpreferences_cheer_eventsub_id.py  0003_remove_alertpreferences_cheers_enabled.py  0004_alter_alertpreferences_match_command.py  0005_soundeffectrequest_is_metered_and_more.py  0006_alter_alertpreferences_cheer_eventsub_id_and_more.py  0007_remove_soundeffectrequest_elevenlabs_record_id.py  0008_rename_timestmap_cheereventlogentry_timestamp.py
src/static/css/: gradient_bg.css  output.css
src/static/tw/: tailwind-input.css
src/templates/: base.html  landing.html
src/templates/accounts/: login.html
src/templates/dashboard/: base.html  billing.html  overview.html  preferences.html
src/templates/dashboard/partials/: alert_preferences_form.html  billing_current_plan_info.html  billing_free_plan_upgrade_form.html  free_trial_usage.html  header.html  log_card.html  log_details.html  sfx_control.html  sfx_control_list.html
src/templates/dashboard/ui/: toast.html
src/templates/dashboard/ui/icons/: generate_music.html
src/templates/legal/: privacy.html  refunds.html  tos.html
src/templates/overlay/: base.html  main.html
src/templates/overlay/partials/: sfx_player.html
src/templates/partials/: media_player.html
src/twitch_bot/: asgi.py  client.py  constants.py  exceptions.py  settings.py  urls.py  views.py  wsgi.py
